Improve chat formatting